--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.0",
     "@apollo/client": "^3.7.14",
     "apollo-angular": "^5.0.0",
+    "apollo-angular-link-http": "^1.11.0",
     "apollo-cache-inmemory": "^1.6.6",
     "graphql": "^15.8.0",
     "react": "^18.2.0",
