--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,11 @@
     "apollo-angular-link-http": "^1.11.0",
     "apollo-cache-inmemory": "^1.6.6",
     "graphql": "^15.8.0",
+    "graphql-scalars": "^1.22.1",
+    "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
     "rxjs": "~7.8.0",
+    "scalr": "^1.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
